--- a/week_10/Week 10 - Inheritance and Polymorphism Practice.ipynb
+++ b/week_10/Week 10 - Inheritance and Polymorphism Practice.ipynb
@@ -792,9 +792,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      ", Retirement and Education Accounts, Checking and Savings Accounts\n"
+     ]
+    }
+   ],
    "source": [
     "import tkinter as tk\n",
     "from tkinter import messagebox,ttk\n",
