--- a/week_9/Week 9 - Object Oriented Programming Practice.ipynb
+++ b/week_9/Week 9 - Object Oriented Programming Practice.ipynb
@@ -891,18 +891,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'self' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[8], line 54\u001b[0m\n\u001b[0;32m     51\u001b[0m             messagebox\u001b[38;5;241m.\u001b[39mshowwarning(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mERROR\u001b[39m\u001b[38;5;124m\"\u001b[39m,\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mInvalid Information\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m     53\u001b[0m win \u001b[38;5;241m=\u001b[39m tk\u001b[38;5;241m.\u001b[39mTk()\n\u001b[1;32m---> 54\u001b[0m package \u001b[38;5;241m=\u001b[39m Delivery(\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241m.\u001b[39mwin)\n\u001b[0;32m     55\u001b[0m win\u001b[38;5;241m.\u001b[39mmainloop\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'self' is not defined"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Exception in Tkinter callback\n",
+      "Traceback (most recent call last):\n",
+      "  File \"c:\\Users\\EMMA-PC\\anaconda3\\Lib\\tkinter\\__init__.py\", line 1948, in __call__\n",
+      "    return self.func(*args)\n",
+      "           ^^^^^^^^^^^^^^^^\n",
+      "TypeError: Delivery.order() missing 1 required positional argument: 'self'\n"
      ]
     }
    ],
@@ -921,47 +922,60 @@
     "    location1a = 'Pan-Atlantic University'\n",
     "    location2 =  'Epe'\n",
     "\n",
-    "    def __init__(self,win,weight,location):\n",
+    "    def __init__(self,weight,location):\n",
     "        self.weight = weight\n",
     "        self.location = location\n",
-    "        self.win = win\n",
     "        \n",
-    "        self.weight = self.delivery_entry1.get()\n",
-    "        self.location = self.delivery_entry2.get()\n",
-    "\n",
-    "        self.win.title(\"PAU Delivery Services\")\n",
-    "        self.win.geometry(\"500x200\")\n",
-    "\n",
-    "        self.delivery_label1 = tk.Label(self.win, text = \"What is the weight of the things you wish to deliver?\")\n",
-    "        self.delivery_label1.pack()\n",
-    "\n",
-    "        self.delivery_entry1 = tk.Entry(self.win)\n",
-    "        self.delivery_entry1.pack()\n",
-    "\n",
-    "        self.delivery_label2 = tk.Label(self.win, text = \"Where do you want it to go?\")\n",
-    "        self.delivery_label2.pack()\n",
-    "\n",
-    "        self.delivery_entry2 = tk.Entry(self.win)\n",
-    "        self.delivery_entry2.pack()\n",
-    "\n",
-    "        self.dbutton = tk.Button(self.win, text = \"Deliver!\", command = self.order)\n",
-    "        self.dbutton.pack()\n",
+    "    def close(self):\n",
+    "        self.mess = messagebox.askyesno(\"Confirm\",\"Do you really want to close this windw?\")\n",
+    "        if self.mess == True:\n",
+    "            self.win.destroy()\n",
+    "        else:\n",
+    "            pass\n",
     "        \n",
     "    def order(self):\n",
-    "        if self.weight >= __class__.weight1 and self.location == __class__.location1 or self.location == __class__.location1a:\n",
-    "            messagebox.showinfo(\"Info\", f\"You are to pay a sum of {__class__.price2}\")\n",
-    "        elif self.weight < __class__.weight1 and self.location == __class__.location1 or self.location == __class__.location1a:\n",
-    "            messagebox.showinfo(\"Info\", f\"You are to pay a sum of {__class__.price1}\")\n",
-    "        elif self.weight >= __class__.weight1 and self.location == __class__.location2:\n",
-    "            messagebox.showinfo(\"Info\", f\"You are to pay a sum of {__class__.price4}\")\n",
-    "        elif self.weight < __class__.weight1 and self.location == __class__.location2:\n",
-    "            messagebox.showinfo(\"Info\", f\"You are to pay a sum of {__class__.price3}\")\n",
+    "        self.weight = self.delivery_entry1.get()\n",
+    "        self.location = self.delivery_entry2.get()\n",
+    "        \n",
+    "        if self.weight >= self.weight1 and self.location == self.location1 or self.location == self.location1a:\n",
+    "            messagebox.showinfo(\"Info\", f\"You are to pay a sum of {self.price2}\")\n",
+    "        elif self.weight < self.weight1 and self.location == self.location1 or self.location == self.location1a:\n",
+    "            messagebox.showinfo(\"Info\", f\"You are to pay a sum of {self.price1}\")\n",
+    "        elif self.weight >= self.weight1 and self.location == self.location2:\n",
+    "            messagebox.showinfo(\"Info\", f\"You are to pay a sum of {self.price4}\")\n",
+    "        elif self.weight < self.weight1 and self.location == self.location2:\n",
+    "            messagebox.showinfo(\"Info\", f\"You are to pay a sum of {self.price3}\")\n",
     "        else:\n",
     "            messagebox.showwarning(\"ERROR\",\"Invalid Information\")\n",
+    "            \n",
+    "    win = tk.Tk()\n",
+    "    win.title(\"PAU Delivery Services\")\n",
+    "    win.geometry(\"500x200\")\n",
     "\n",
-    "win = tk.Tk()\n",
-    "package = Delivery(win)\n",
-    "win.mainloop\n"
+    "    delivery_label1 = tk.Label(win, text = \"What is the weight of the things you wish to deliver?\")\n",
+    "    delivery_label1.pack()\n",
+    "\n",
+    "    delivery_entry1 = tk.Entry(win)\n",
+    "    delivery_entry1.pack()\n",
+    "\n",
+    "    delivery_label2 = tk.Label(win, text = \"Where do you want it to go?\")\n",
+    "    delivery_label2.pack()\n",
+    "\n",
+    "    delivery_entry2 = tk.Entry(win)\n",
+    "    delivery_entry2.pack()\n",
+    "\n",
+    "    dbutton = tk.Button(win, text = \"Deliver!\", command = order)\n",
+    "    dbutton.pack()\n",
+    "    \n",
+    "    closed_b = tk.Button(win, text = \"Close!\", command = close)\n",
+    "    closed_b.pack()\n",
+    "    \n",
+    "    win.mainloop()\n",
+    "    \n",
+    "    \n",
+    "package = Delivery\n",
+    "package.order()\n",
+    "\n"
    ]
   },
   {
