--- a/week_11/Week 11 - Encapsulation Practice.ipynb
+++ b/week_11/Week 11 - Encapsulation Practice.ipynb
@@ -470,16 +470,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<bound method SIS.operation of <__main__.SIS object at 0x0000025168DB7150>>"
+       "<bound method SIS.operation of <__main__.SIS object at 0x0000017946CCBF10>>"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -495,51 +495,46 @@
     "\n",
     "\n",
     "class SIS:\n",
-    "    pir = []\n",
-    "    yank = []\n",
-    "    bu = []\n",
+    "    \n",
     "    \n",
     "    def __init__(self):\n",
     "        self.age = []\n",
-    "        self._caution = messagebox.showerror(\"Error!\",\"Confidential Info!\")\n",
+    "        self.pir = []\n",
+    "        self.yank = []\n",
+    "        self.bu = []\n",
     "        \n",
     "        \n",
     "    def pirate_csv(self):\n",
+    "        self.pir = self.age\n",
     "        pirate = pd.DataFrame(self.pir)\n",
     "        pirate.to_csv(\"The Pirates\")\n",
     "        return self.pir\n",
     "    \n",
     "    def yankees_csv(self):\n",
+    "        self.yank = self.age\n",
     "        yankees = pd.DataFrame(self.yank)\n",
     "        yankees.to_csv(\"The Yankees\")\n",
     "        return self.yank\n",
     "        \n",
     "    def bulls_csv(self):\n",
+    "        self.bu = self.age\n",
     "        bulls = pd.DataFrame(self.bu)\n",
     "        bulls.to_csv(\"The Bulls\")\n",
     "        return self.bu\n",
-    "        \n",
-    "    def get_func(self):\n",
-    "        return self._caution\n",
-    "        \n",
-    "        \n",
+    "             \n",
     "             \n",
     "    def operation(self):\n",
     "        for i,j in data.iterrows():\n",
     "            self.age = j[2]\n",
-    "            print(self.age)\n",
     "            \n",
     "        if self.age > 14 and self.age <= 18:\n",
-    "            self.pir.append(self.age)\n",
     "            self.pirate_csv()\n",
     "        elif self.age > 18 and self.age <= 22:\n",
-    "            self.yank.append(self.age)\n",
     "            self.yankees_csv()\n",
     "        elif self.age > 22 and self.age <= 25:\n",
-    "            self.bu.append(self.age)\n",
     "            self.bulls_csv()\n",
     "        elif self.age > 25:\n",
-    "            self.get_func()\n",
+    "              self._caution = messagebox.showerror(\"Error!\",\"Confidential Info!\")\n",
     "        else:\n",
     "            messagebox.showwarning(\"Caution!\", \"You cannot do this!\")\n",
     "            \n",
