--- a/week_12/Week 12 - Abstraction Practice.ipynb
+++ b/week_12/Week 12 - Abstraction Practice.ipynb
@@ -597,8 +597,7 @@
    "outputs": [],
    "source": [
     "import tkinter as tk\n",
-    "from tkinter import Message, messagebox, ttk\n",
-    "from tkinter import *\n",
+    "from tkinter import messagebox\n",
     "from abc import ABC, abstractmethod\n",
     "\n",
     "class external_vendors(ABC):\n",
@@ -642,10 +641,114 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "buttons() missing 3 required positional arguments: 'c', 'f', and 's'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[16], line 81\u001b[0m\n\u001b[0;32m     78\u001b[0m root_2 \u001b[38;5;241m=\u001b[39m tk\u001b[38;5;241m.\u001b[39mLabel(root, text \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mHere are the top amazing a nd affordabke vendors we have in PAU:\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m     79\u001b[0m root_2\u001b[38;5;241m.\u001b[39mpack()\n\u001b[1;32m---> 81\u001b[0m ton_1 \u001b[38;5;241m=\u001b[39m tk\u001b[38;5;241m.\u001b[39mButton(root, text \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mCooperative Cafeteria\u001b[39m\u001b[38;5;124m\"\u001b[39m, command \u001b[38;5;241m=\u001b[39m \u001b[43mbuttons\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m)\n\u001b[0;32m     82\u001b[0m ton_1\u001b[38;5;241m.\u001b[39mpack()\n\u001b[0;32m     84\u001b[0m ton_2 \u001b[38;5;241m=\u001b[39m tk\u001b[38;5;241m.\u001b[39mButton(root, text \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mFaith Hostel Cafeteria\u001b[39m\u001b[38;5;124m\"\u001b[39m, command \u001b[38;5;241m=\u001b[39m buttons())\n",
+      "\u001b[1;31mTypeError\u001b[0m: buttons() missing 3 required positional arguments: 'c', 'f', and 's'"
+     ]
+    }
+   ],
+   "source": [
+    "import tkinter as tk\n",
+    "from tkinter import Message, messagebox, ttk\n",
+    "from tkinter import *\n",
+    "from abc import ABC, abstractmethod\n",
+    "import pandas as pd\n",
+    "\n",
+    "class External_Vendors(ABC):\n",
+    "        \n",
+    "    @abstractmethod\n",
+    "    def menu(self):\n",
+    "        pass\n",
+    "        \n",
+    "class COOP(External_Vendors):\n",
+    "    def menu(self):\n",
+    "        self.m_f = {\"Jollof Rice and Stew\" : 200, \"White Rice and Stew\" : 200,\"Fried Rice\":200, \"Salad\" : 100, \"Plantain\" : 100}\n",
+    "        self.data = pd.DataFrame(list(self.m_f.items()), columns = [\"Food Items\", \"Price\"])\n",
+    "        self.m = self.data.to_string(index = False)\n",
+    "        \n",
+    "        self.win = tk.Tk()\n",
+    "        self.win.title(\"The Cooperative Cafeteria Menu\")\n",
+    "        self.win.geometry(\"500X500\")\n",
+    "    \n",
+    "        self.win_label = tk.Label(self.win, text = self.m)\n",
+    "        self.win_label.pack()\n",
+    "        \n",
+    "        self.win.mainloop()\n",
+    "        \n",
+    "class Faith(External_Vendors):\n",
+    "    def menu(self):\n",
+    "        self.m_f = {\"Fried Rice\" : 400, \"White Rice and Stew\" : 400,\"Jollof Rice\": 400, \"Beans\" : 200, \"Chicken\" : 1000}\n",
+    "        self.data2 = pd.DataFrame(list(self.m_f.items()), columns = [\"Food Items\", \"Price\"])\n",
+    "        self.m = self.data2.to_string(index = False)\n",
+    "        \n",
+    "        self.win = tk.Tk()\n",
+    "        self.win.title(\"The Faith Hostel Cafeteria Menu\")\n",
+    "        self.win.geometry(\"500X500\")\n",
+    "    \n",
+    "        self.win_label = tk.Label(self.win, text = self.m)\n",
+    "        self.win_label.pack()\n",
+    "        \n",
+    "        self.win.mainloop()\n",
+    "        \n",
+    "        \n",
+    "class Student_Center(External_Vendors):\n",
+    "    def menu(self):\n",
+    "        self.m_f = {\"Chicken Fried Rice\" : 800, \"Pomo Sauce\" : 300,\"Spaghetti Jollof\": 500, \"Amala/Ewedu\" : 500, \"Semo with Eforiro Soup\" : 500}\n",
+    "        self.data3 = pd.DataFrame(list(self.m_f.items()), columns = [\"Food Items\", \"Price\"])\n",
+    "        self.m = self.data3.to_string(index = False)\n",
+    "        \n",
+    "        self.win = tk.Tk()\n",
+    "        self.win.title(\"The Student Center Cafeteria Menu\")\n",
+    "        self.win.geometry(\"500X500\")\n",
+    "    \n",
+    "        self.win_label = tk.Label(self.win, text = self.m)\n",
+    "        self.win_label.pack()\n",
+    "        \n",
+    "        self.win.mainloop()\n",
+    "        \n",
+    "        \n",
+    "def buttons():\n",
+    "    if ton_1:\n",
+    "        c = COOP()\n",
+    "        c.menu()\n",
+    "    elif ton_2:\n",
+    "        f = Faith()\n",
+    "        f.menu()\n",
+    "    elif ton_3:\n",
+    "        s = Student_Center()\n",
+    "        s.menu()\n",
+    "        \n",
+    "root = tk.Tk()\n",
+    "root.title(\"Vendor Select Window\")\n",
+    "root.geometry(\"500x500\")\n",
+    "\n",
+    "root_1 = tk.Label(root, text = \"Welcome to PAU's Vendor Select System giving you the best windows to choose from\")\n",
+    "root_1.pack()\n",
+    "\n",
+    "root_2 = tk.Label(root, text = \"Here are the top amazing a nd affordabke vendors we have in PAU:\")\n",
+    "root_2.pack()\n",
+    "\n",
+    "ton_1 = tk.Button(root, text = \"Cooperative Cafeteria\", command = buttons())\n",
+    "ton_1.pack()\n",
+    "\n",
+    "ton_2 = tk.Button(root, text = \"Faith Hostel Cafeteria\", command = buttons())\n",
+    "ton_2.pack()\n",
+    "\n",
+    "ton_3 = tk.Button(root, text = \"Student Center Cafeteria\", command = buttons())\n",
+    "ton_3.pack()\n",
+    "\n",
+    "root.mainloop()\n",
+    "    \n"
+   ]
   }
  ],
  "metadata": {
